--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <nav class="nav nav-pills">
     <a class="nav-link" routerLink="home" routerLinkActive="active" *ngIf="auth.loggedIn">Home</a>
     <a class="nav-link" routerLink="login"  *ngIf="!auth.loggedIn">Login</a>
+    <a class="nav-link" routerLink="sign_up"  *ngIf="!auth.loggedIn">Sign-Up</a>
     <a class="nav-link" (click)="logout()" href="#" *ngIf="auth.loggedIn">Logout</a>
   </nav>
   <router-outlet></router-outlet>
